chore: add some changes

--- a/.fonts.conf
+++ b/.fonts.conf
@@ -1,6 +1,7 @@
-<?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <!-- /etc/fonts/fonts.conf file to configure system font access -->
 <fontconfig>
-	<dir prefix="xdg">$HOME/.local/share/fonts</dir>
+ <dir prefix="xdg">$HOME/.local/share/fonts</dir>
+ <dir>~/.fonts</dir>
 </fontconfig>
