chore: add some files to get plasma-i3

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -111,13 +111,13 @@ inactive-opacity-override = false;
 # Do not let blur radius adjust based on window opacity.
 # deviation = 1.0;
 
-blur: 
-{
-	method = "gaussian";
-	size = 10;
-	deviation = 5.0;
-	kernel = "11x11gaussian";
-};
+# blur: 
+# {
+# 	method = "gaussian";
+# 	size = 10;
+# 	deviation = 5.0;
+# 	kernel = "11x11gaussian";
+# };
 # blur-background = true;
 # blur-background-frame = true;
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
@@ -175,7 +175,7 @@ detect-client-opacity = true;
 
 # Specify refresh rate of the screen.
 # If not specified or 0, picom will try detecting this with X RandR extension.
-refresh-rate = 0;
+# refresh-rate = 0;
 
 # Vertical synchronization: match the refresh rate of the monitor
 vsync = true;
