--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-# [submodule ".config/alacritty/themes"]
-# 	path = .config/alacritty/themes
-# 	url = https://github.com/eendroroy/alacritty-theme
 # [submodule ".config/vifm/colors"]
 # 	path = .config/vifm/colors
 # 	url = https://github.com/vifm/vifm-colors.git
 [submodule ".config/alacritty/themes"]
 	path = .config/alacritty/themes
 	url = https://github.com/eendroroy/alacritty-theme
+[submodule "/Users/hali/.config/vifm/colors"]
+	path = /Users/hali/.config/vifm/colors
+	url = https://github.com/vifm/vifm-colors.git
