--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -16,7 +16,7 @@ font:
     family: Iosevka
     style: Italic
 
-  size: 13
+  size: 12
 
   draw_bold_text_with_bright_colors: true
 
@@ -37,35 +37,35 @@ key_bindings:
 # gruvbox_light.yaml
 # Colors (Gruvbox light)
 colors:
-  # COLORSCHEME: gruvbox_light.yaml
+  # COLORSCHEME: gruvbox_dark.yaml
   # Default colors
   primary:
     # hard contrast: background = '0xf9f5d7'
-    background: '0xfbf1c7'
-    # soft contrast: background = '0xf2e5bc'
-    foreground: '0x3c3836'
+    background: '0x282828'
+    # soft contrast: background = '0x32302f'
+    foreground: '0xebdbb2'
 
   # Normal colors
   normal:
-    black: '0xfbf1c7'
+    black: '0x282828'
     red: '0xcc241d'
     green: '0x98971a'
     yellow: '0xd79921'
     blue: '0x458588'
     magenta: '0xb16286'
     cyan: '0x689d6a'
-    white: '0x7c6f64'
+    white: '0xa89984'
 
   # Bright colors
   bright:
     black: '0x928374'
-    red: '0x9d0006'
-    green: '0x79740e'
-    yellow: '0xb57614'
-    blue: '0x076678'
-    magenta: '0x8f3f71'
-    cyan: '0x427b58'
-    white: '0x3c3836'
+    red: '0xfb4934'
+    green: '0xb8bb26'
+    yellow: '0xfabd2f'
+    blue: '0x83a598'
+    magenta: '0xd3869b'
+    cyan: '0x8ec07c'
+    white: '0xebdbb2'
   dim:
     black: '0x31363b'
     red: '0x783228'
