--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,5 +1,5 @@
 Gtk/EnableAnimations 1
-Gtk/DecorationLayout "minimize,maximize,close:icon"
+Gtk/DecorationLayout "close,minimize,maximize:icon"
 Gtk/PrimaryButtonWarpsSlider 0
 Gtk/ToolbarStyle 3
 Gtk/MenuImages 1
