--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
-    "@yaegassy/coc-volar": ">=0.16.4",
+    "@yaegassy/coc-volar": ">=0.17.1",
+    "@yaegassy/coc-volar-tools": ">=0.1.2",
+    "coc-clangd": ">=0.21.4",
     "coc-css": ">=1.3.0",
+    "coc-go": ">=1.3.0",
+    "coc-java": ">=1.5.5",
     "coc-json": ">=1.4.1",
-    "coc-snippets": ">=3.0.8",
-    "coc-tsserver": ">=1.10.0",
+    "coc-prettier": ">=9.2.3",
+    "coc-snippets": ">=3.0.9",
+    "coc-tsserver": ">=1.10.1",
     "coc-yaml": ">=1.7.5"
   }
 }
