--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
+    "@yaegassy/coc-volar": ">=0.18.1",
+    "@yaegassy/coc-volar-tools": ">=0.1.2",
     "coc-css": ">=1.3.0",
-    "coc-json": ">=1.4.1",
+    "coc-json": ">=1.4.2",
     "coc-phpactor": ">=1.0.3",
     "coc-phpls": ">=2.2.2",
-    "coc-snippets": ">=3.0.8",
-    "coc-tsserver": ">=1.9.16"
+    "coc-pyls": ">=1.0.6",
+    "coc-snippets": ">=3.0.14",
+    "coc-tsserver": ">=1.10.5"
   }
 }
