--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,15 +1,16 @@
 {
   "dependencies": {
-    "@yaegassy/coc-volar": ">=0.17.1",
-    "@yaegassy/coc-volar-tools": ">=0.1.2",
-    "coc-clangd": ">=0.21.4",
+    "@yaegassy/coc-volar": ">=0.24.10",
+    "@yaegassy/coc-volar-tools": ">=0.2.3",
+    "coc-angular": ">=13.3.6",
+    "coc-clangd": ">=0.25.0",
     "coc-css": ">=1.3.0",
     "coc-go": ">=1.3.0",
     "coc-java": ">=1.5.5",
-    "coc-json": ">=1.4.1",
-    "coc-prettier": ">=9.2.3",
-    "coc-snippets": ">=3.0.9",
-    "coc-tsserver": ">=1.10.1",
-    "coc-yaml": ">=1.7.5"
+    "coc-json": ">=1.6.1",
+    "coc-prettier": ">=9.3.1",
+    "coc-snippets": ">=3.1.2",
+    "coc-tsserver": ">=1.11.9",
+    "coc-yaml": ">=1.8.0"
   }
 }
