--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,13 +1,18 @@
 {
   "dependencies": {
-    "@yaegassy/coc-volar": ">=0.18.1",
-    "@yaegassy/coc-volar-tools": ">=0.1.2",
+    "@yaegassy/coc-volar": ">=0.21.5",
+    "@yaegassy/coc-volar-tools": ">=0.1.4",
     "coc-css": ">=1.3.0",
     "coc-json": ">=1.4.2",
     "coc-phpactor": ">=1.0.3",
     "coc-phpls": ">=2.2.2",
     "coc-pyls": ">=1.0.6",
     "coc-snippets": ">=3.0.14",
-    "coc-tsserver": ">=1.10.5"
-  }
+    "coc-svelte": ">=0.4.2",
+    "coc-tsserver": ">=1.10.5",
+    "coc-vue": ">=0.8.1"
+  },
+  "disabled": [],
+  "locked": [],
+  "lastUpdate": 1664051793053
 }
