--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -7,5 +7,5 @@ Gtk/ButtonImages 1
 Gtk/CursorThemeSize 24
 Gtk/CursorThemeName "Breeze_Obsidian"
 Net/IconThemeName "Papirus-Dark"
-Gtk/FontName "Montserrat,  10"
+Gtk/FontName "IBM Plex Sans,  10"
 
