--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -16,7 +16,7 @@ general {
 }
 
 # order += "ipv6"
-order += "wireless wlo1"
+order += "wireless wlan0"
 order += "ethernet _first_"
 order += "battery 0"
 # order += "disk /"
@@ -25,7 +25,7 @@ order += "battery 0"
 order += "volume master"
 order += "tztime local"
 
-wireless wlo1 {
+wireless wlan0 {
   format_up = " %essid (%quality)"
   format_down = ""
 }
