--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -39,5 +39,6 @@
 		"vue"
 	],
 	"svelte.enable-ts-plugin": true,
-	"sumneko-lua.enableNvimLuaDev": true
+	"sumneko-lua.enableNvimLuaDev": true,
+	"volar.formatting.printWidth": 80
 }
