--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,43 +1,9 @@
+import = [
+	"~/.config/alacritty/themes/themes/gruvbox_dark.toml"
+]
+
 [colors]
 draw_bold_text_with_bright_colors = true
-
-[colors.bright]
-black = "0x928374"
-blue = "0x83a598"
-cyan = "0x8ec07c"
-green = "0xb8bb26"
-magenta = "0xd3869b"
-red = "0xfb4934"
-white = "0xebdbb2"
-yellow = "0xfabd2f"
-
-[colors.cursor]
-cursor = "0x878787"
-text = "0xeeeeee"
-
-[colors.dim]
-black = "0x31363b"
-blue = "0x1b668f"
-cyan = "0x186c60"
-green = "0x17a262"
-magenta = "0x614a73"
-red = "0x783228"
-white = "0x63686d"
-yellow = "0xb65619"
-
-[colors.normal]
-black = "0x282828"
-blue = "0x458588"
-cyan = "0x689d6a"
-green = "0x98971a"
-magenta = "0xb16286"
-red = "0xcc241d"
-white = "0xa89984"
-yellow = "0xd79921"
-
-[colors.primary]
-background = "0x282828"
-foreground = "0xebdbb2"
 
 [cursor]
 style = "Underline"
