--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -16,7 +16,7 @@ general {
 }
 
 # order += "ipv6"
-order += "wireless wlan0"
+order += "wireless wlo1"
 order += "ethernet _first_"
 order += "battery 0"
 # order += "disk /"
@@ -25,7 +25,7 @@ order += "battery 0"
 order += "volume master"
 order += "tztime local"
 
-wireless wlan0 {
+wireless wlo1 {
   format_up = " %essid (%quality)"
   format_down = ""
 }
@@ -64,7 +64,7 @@ tztime local {
 }
 
 volume master {
-  format = " %volume"
+  format = " %volume"
   format_muted = ""
   device = "default"
   mixer = "Master"
