--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,13 +1,15 @@
+Net/ThemeName "Breeze"
+Net/SoundThemeName "ocean"
 Gdk/UnscaledDPI 98304
 Gdk/WindowScalingFactor 1
 Gtk/EnableAnimations 1
-Gtk/DecorationLayout "close,minimize,maximize:icon"
-Gtk/PrimaryButtonWarpsSlider 0
+Gtk/DecorationLayout "icon:minimize,maximize,close"
+Gtk/PrimaryButtonWarpsSlider 1
 Gtk/ToolbarStyle 3
 Gtk/MenuImages 1
 Gtk/ButtonImages 1
 Gtk/CursorThemeSize 24
-Gtk/CursorThemeName "Breeze_Obsidian"
-Net/IconThemeName "Papirus-Dark"
-Gtk/FontName "IBM Plex Sans,  10"
+Gtk/CursorThemeName "breeze_cursors"
+Net/IconThemeName "breeze"
+Gtk/FontName "Montserrat,  10"
 
