--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -3,11 +3,11 @@ gtk-application-prefer-dark-theme=false
 gtk-button-images=true
 gtk-cursor-theme-name=breeze_cursors
 gtk-cursor-theme-size=24
-gtk-decoration-layout=icon:minimize,maximize,close
+gtk-decoration-layout=close,minimize,maximize:icon
 gtk-enable-animations=true
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
-gtk-font-name=Montserrat,  10
+gtk-font-name=Iosevka Nerd Font,  10
 gtk-icon-theme-name=breeze
 gtk-menu-images=true
 gtk-modules=window-decorations-gtk-module:colorreload-gtk-module
