--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -3,7 +3,7 @@ Net/SoundThemeName "ocean"
 Gdk/UnscaledDPI 98304
 Gdk/WindowScalingFactor 1
 Gtk/EnableAnimations 1
-Gtk/DecorationLayout "icon:minimize,maximize,close"
+Gtk/DecorationLayout "close,minimize,maximize:icon"
 Gtk/PrimaryButtonWarpsSlider 1
 Gtk/ToolbarStyle 3
 Gtk/MenuImages 1
@@ -11,5 +11,5 @@ Gtk/ButtonImages 1
 Gtk/CursorThemeSize 24
 Gtk/CursorThemeName "breeze_cursors"
 Net/IconThemeName "breeze"
-Gtk/FontName "Montserrat,  10"
+Gtk/FontName "Iosevka Nerd Font,  10"
 
