--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-import = [
-	"~/.config/alacritty/themes/themes/gruvbox_dark.toml"
-]
 
 [colors]
 draw_bold_text_with_bright_colors = true
@@ -40,3 +37,8 @@ hide_when_typing = true
 dynamic_padding = true
 opacity = 0.93
 title = "Terminal"
+
+[general]
+import = [
+	"~/.config/alacritty/themes/themes/gruvbox_dark.toml"
+]
