--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
 gtk-application-prefer-dark-theme=false
-gtk-button-images=true
+gtk-button-images=1
 gtk-cursor-theme-name=breeze_cursors
 gtk-cursor-theme-size=24
 gtk-decoration-layout=close,minimize,maximize:icon
@@ -8,15 +8,14 @@ gtk-enable-animations=true
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-font-name=Iosevka Nerd Font,  10
-gtk-icon-theme-name=breeze
-gtk-menu-images=true
-gtk-modules=window-decorations-gtk-module:colorreload-gtk-module
+gtk-icon-theme-name=Papirus-Light
+gtk-menu-images=1
 gtk-primary-button-warps-slider=true
 gtk-sound-theme-name=ocean
 gtk-theme-name=Breeze
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-toolbar-style=3
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-xft-antialias=1
 gtk-xft-dpi=98304
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintmedium
+gtk-xft-hintstyle=hintfull
