--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -16,7 +16,7 @@ general {
 }
 
 # order += "ipv6"
-order += "wireless wlan0"
+order += "wireless wlo1"
 order += "ethernet _first_"
 order += "battery 0"
 # order += "disk /"
@@ -60,12 +60,12 @@ memory {
 }
 
 tztime local {
-  format = "%d-%m-%Y  %H:%M"
+  format = "%d-%m-%Y  %H:%M"
 }
 
 volume master {
-  format = " %volume"
-  format_muted = " "
+  format = "   %volume"
+  format_muted = " "
   device = "default"
   mixer = "Master"
   mixer_idx = 0
