fix(bluejay): fonts

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -7,9 +7,17 @@
  <alias>
     <family>Alacritty Font</family>
     <prefer>
-        <family>Font Awesome 6</family>
+        <family>Font Awesome 6 Free</family>
         <family>Iosevka</family>
         <family>Noto Color Emoji</family>
     </prefer>
   </alias>
+	<match target="pattern">
+    <test qual="any" name="family">
+      <string>IBM Plex Mono</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Font Awesome 6 Free</string>
+    </edit>
+  </match>
 </fontconfig>
