--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,23 +1,27 @@
-<?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'urn:fontconfig:fonts.dtd'>
 <fontconfig>
-	<match target="pattern">
-		<test qual="any" name="family" compare="eq"><string>Font Awesome</string></test>
-	</match>
- <alias>
-    <family>Alacritty Font</family>
+ <match target="pattern">
+  <test compare="contains" name="family" qual="any">
+   <string>IBM Plex</string>
+  </test>
+  <edit binding="strong" mode="prepend" name="family">
+   <string>Font Awesome 6 Free</string>
+  </edit>
+ </match>
+ <match target="pattern">
+  <test compare="contains" name="family" qual="any">
+   <string>Montserrat</string>
+  </test>
+  <edit binding="strong" mode="prepend" name="family">
+   <string>Font Awesome 6 Free</string>
+  </edit>
+ </match>
+  <alias>
+    <family>Iosevka</family>
     <prefer>
-        <family>Font Awesome 6 Free</family>
-        <family>Iosevka</family>
-        <family>Noto Color Emoji</family>
+      <family>Iosevka</family>
+      <family>Font Awesome 6 Free</family>
     </prefer>
   </alias>
-	<match target="pattern">
-    <test qual="any" name="family">
-      <string>IBM Plex Mono</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Font Awesome 6 Free</string>
-    </edit>
-  </match>
 </fontconfig>
