--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -8,14 +8,15 @@ gtk-enable-animations=true
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-font-name=Iosevka Nerd Font,  10
-gtk-icon-theme-name=Papirus-Light
+gtk-icon-theme-name=Papirus-Dark
 gtk-menu-images=1
 gtk-primary-button-warps-slider=true
 gtk-sound-theme-name=ocean
-gtk-theme-name=Breeze
+gtk-theme-name=Breeze-Dark
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-xft-antialias=1
 gtk-xft-dpi=98304
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
+gtk-xft-hintstyle=hintslight
+gtk-xft-rgba=rgb
